--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -174,29 +174,76 @@ nav ul.subMenu a {
 /* Section principale */
 /* line 132, ../scss/screen.scss */
 section.main {
-  padding: 1.5em 4em;
+  padding: 1em 4em;
   width: 40em;
   margin: 0 auto;
   min-height: 20em; }
+/* line 137, ../scss/screen.scss */
+section.main h2 {
+  font-size: 22px;
+  color: #62859d;
+  padding-bottom: 0.5em; }
+/* line 142, ../scss/screen.scss */
+section.main label {
+  display: block;
+  color: #4f4f4f;
+  padding-top: 0.4em; }
+/* line 146, ../scss/screen.scss */
+section.main label span {
+  color: black; }
+/* line 150, ../scss/screen.scss */
+section.main .photoProfilUser {
+  float: left;
+  padding: 0 1em 1em 0; }
+/* line 154, ../scss/screen.scss */
+section.main .text, section.main select {
+  padding: 0.5em 0.75em;
+  font-size: 16px;
+  -webkit-border-radius: 0.5em;
+  -moz-border-radius: 0.5em;
+  -ms-border-radius: 0.5em;
+  -o-border-radius: 0.5em;
+  border-radius: 0.5em;
+  border: 1px solid #969595;
+  width: 16em;
+  margin-bottom: 0.5em; }
+/* line 165, ../scss/screen.scss */
+section.main .validation {
+  display: block;
+  background-color: #d41c2c;
+  color: white;
+  padding: 1em 1.5em;
+  text-transform: uppercase;
+  border: none;
+  cursor: pointer;
+  -webkit-border-radius: 0.5em;
+  -moz-border-radius: 0.5em;
+  -ms-border-radius: 0.5em;
+  -o-border-radius: 0.5em;
+  border-radius: 0.5em;
+  margin-top: 1em; }
+/* line 175, ../scss/screen.scss */
+section.main .validation:hover {
+  background-color: #b21c27; }
 
 /* Footer */
-/* line 141, ../scss/screen.scss */
+/* line 183, ../scss/screen.scss */
 footer {
   background-color: #c0d8ea;
   position: relative; }
-/* line 144, ../scss/screen.scss */
+/* line 186, ../scss/screen.scss */
 footer img {
   float: left; }
-/* line 147, ../scss/screen.scss */
+/* line 189, ../scss/screen.scss */
 footer .infosFooter {
   color: #62859d;
   padding: 1.5em 0;
   width: 20em;
   margin: 0 auto; }
-/* line 153, ../scss/screen.scss */
+/* line 195, ../scss/screen.scss */
 footer #logoFooter {
   padding-right: 1em; }
-/* line 156, ../scss/screen.scss */
+/* line 198, ../scss/screen.scss */
 footer .arrow-up {
   position: absolute;
   top: 2em;
@@ -209,8 +256,8 @@ footer .arrow-up {
   -o-border-radius: 2em;
   border-radius: 2em; }
 
-/* line 167, ../scss/screen.scss */
-footer:after {
+/* line 209, ../scss/screen.scss */
+footer:after, .informationsStudent:after {
   content: "";
   clear: both;
   display: block; }
