--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -196,7 +196,7 @@ section.main .photoProfilUser {
   float: left;
   padding: 0 1em 1em 0; }
 /* line 154, ../scss/screen.scss */
-section.main .text, section.main select {
+section.main .text, section.main select, section.main #inputDescription {
   padding: 0.5em 0.75em;
   font-size: 16px;
   -webkit-border-radius: 0.5em;
@@ -208,6 +208,9 @@ section.main .text, section.main select {
   width: 16em;
   margin-bottom: 0.5em; }
 /* line 165, ../scss/screen.scss */
+section.main #inputDescription {
+  width: 30em; }
+/* line 169, ../scss/screen.scss */
 section.main .validation {
   display: block;
   background-color: #d41c2c;
@@ -222,28 +225,28 @@ section.main .validation {
   -o-border-radius: 0.5em;
   border-radius: 0.5em;
   margin-top: 1em; }
-/* line 175, ../scss/screen.scss */
+/* line 179, ../scss/screen.scss */
 section.main .validation:hover {
   background-color: #b21c27; }
 
 /* Footer */
-/* line 183, ../scss/screen.scss */
+/* line 187, ../scss/screen.scss */
 footer {
   background-color: #c0d8ea;
   position: relative; }
-/* line 186, ../scss/screen.scss */
+/* line 190, ../scss/screen.scss */
 footer img {
   float: left; }
-/* line 189, ../scss/screen.scss */
+/* line 193, ../scss/screen.scss */
 footer .infosFooter {
   color: #62859d;
   padding: 1.5em 0;
   width: 20em;
   margin: 0 auto; }
-/* line 195, ../scss/screen.scss */
+/* line 199, ../scss/screen.scss */
 footer #logoFooter {
   padding-right: 1em; }
-/* line 198, ../scss/screen.scss */
+/* line 202, ../scss/screen.scss */
 footer .arrow-up {
   position: absolute;
   top: 2em;
@@ -256,7 +259,7 @@ footer .arrow-up {
   -o-border-radius: 2em;
   border-radius: 2em; }
 
-/* line 209, ../scss/screen.scss */
+/* line 213, ../scss/screen.scss */
 footer:after, .informationsStudent:after {
   content: "";
   clear: both;
