--- a/public/scss/screen.scss
+++ b/public/scss/screen.scss
@@ -139,6 +139,11 @@ section.main{
 		color: $bleuFonce;
 		padding-bottom: 0.5em;
 	}
+	h3{
+		font-size: 20px;
+		color: $bleuGris;
+		padding: 0.75em 0 0.25em 0;
+	}
 	label{
 		display: block;
 		color: $grisFonce;
