--- a/public/scss/screen.scss
+++ b/public/scss/screen.scss
@@ -202,7 +202,9 @@ section.main{
 		@extend .validation;
 		background-color: $rougeFonce;
 		position: relative;
-		top: -1.25em;
+		top: -1.10em;
+		font-size: 14px;
+		padding: 0.5em 0.75em;
 		&:hover{
 			background-color: $rougePure;
 		}	
