--- a/public/scss/screen.scss
+++ b/public/scss/screen.scss
@@ -130,14 +130,12 @@ section.main{
 		float: left;
 	}
 	.table-sessions{
-		width: 70%;
 		height: 25em;
 		overflow: hidden;
 		overflow-y: scroll;
 
 	}
 	.calendar table{
-		//width: 15em;
 		margin: 0em 0 0 1.5em;
 		font-size: 18px;
 		text-align: center;
@@ -165,7 +163,7 @@ footer{
 	}
 	.infosFooter{
 		color: $bleuFonce;
-		padding: 1.5em 0;
+		padding: 2em 0;
 		width: 20em;
 		margin: 0 auto;
 	}
@@ -174,8 +172,6 @@ footer{
 	}
 	.arrow-up{
 		position: absolute;
-		top: 1em;
-		left: 6em;
 		background-color: $rougePure;
 		padding: 0.7em 0.7em;
 		@include border-radius(2em);
@@ -188,3 +184,5 @@ footer:after,.informationsStudent:after,.change:after, .changes:after, .table-se
 	clear:both;
 	display: block;
 }
+
+@import "mediaqueries";
